# dotfiles

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  sentu_install.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 🐞-bug-report.md
.github/scripts/: generate_badges.py
.github/workflows/: generate-badges.yml
ansible/: ansible.cfg  inventory.ini  playbook-test.yml  playbook.yml
ansible/roles/00_load_vars/tasks/: main.yml
ansible/roles/02_add_repositories/tasks/: main.yml
ansible/roles/03_install_core_dependencies/tasks/: main.yml
ansible/roles/05_install_nvm/tasks/: main.yml
ansible/roles/06_install_lazygit/tasks/: main.yml
ansible/roles/07_install_extended_dependencies/tasks/: main.yml
ansible/roles/08_install_docker/defaults/: main.yml
ansible/roles/08_install_docker/handlers/: main.yml
ansible/roles/08_install_docker/meta/: main.yml
ansible/roles/08_install_docker/tasks/: Archlinux.yml  RedHat.yml  main.yml
ansible/roles/08_install_post_install/tasks/: go_tools.yml  ruby.yml  rust_tools.yml  tmux.yml
ansible/roles/08_post_install/tasks/: atuin.yml  brave.yml  docker.yml  go_tools.yml  main.yml  ruby.yml
ansible/roles/09_config_zsh/tasks/: main.yml
ansible/roles/test/tasks/: main.yml
ansible/vars/: Archlinux.yaml  Debian.yaml  RedHat.yaml  Suse.yaml  flatpak.yaml  global.yaml  installer_config.yaml  opensuse.yaml  post_install.yaml  redhat.yaml  suse.yaml  wallpapers.yaml
config/: konsolerc
config/gh/: hosts.yml
config/nvim/: lazy-lock.json  lazyvim.json
home/: .p10k.zsh  .zshrc
logs/: ansible.txt
(+34 files in other folders)
