[project]
name = "dotfiles"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Luis Guillermo Echenique", email = "elepistemedev@gmail.com" }
]
dependencies = [
    "ansible>=11.4.0",
    "libdnf5>=0.0.1a1",
    "ansible-lint>=25.2.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dotfiles"]
